# CloudPulse

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: pylint.yml
docs/tutorials/: create-reddit-bot.md  update-feeds.md
src/: cloudpulse.py  config.ini
src/app/: __main__.py  app.py  output.py  streamlit_app.py
src/collector/: reddit.py  rss.py
