##########################
# Setup.py Configuration #
##########################
[metadata]
name = CloudPulse
version = 0.1.0
description = CloudPulse is a tool to curate compelling news on cloud technologies and cybersecurity. By aggregating information from RSS feeds and Reddit, it identifies the most noteworthy and impactful updates in the tech industry.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = "https://github.com/RoseSecurity/CloudPulse"
download_url = "https://github.com/RoseSecurity/CloudPulse.git"

# Author information
author = RoseSecurity
author_email = rosesecurityresearch@proton.me
maintainer = RoseSecurity
maintainer_email = rosesecurityresearch@proton.me

# License Information
license = Apache 2.0
license_files =
    LICENSE

# Search tags
classifiers =
    Operating System :: OS Independent
    Framework :: Pytest
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
# Random options
install_requires = file: requirements.txt
zip_safe = false
include_package_data = True
python_requires = >=3.11

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude = docs

[pycodestyle]
max-line-length = 120
exclude = docs
